--- a/src/less/core/utility.less
+++ b/src/less/core/utility.less
@@ -21,6 +21,8 @@
 //                  `uk-hidden-*`
 //                  `uk-invisible`
 //
+// Used by:         Overlay
+//
 // ========================================================================
 
 
@@ -450,7 +452,6 @@
 .uk-position-bottom {
     position: absolute !important;
     width: 100%;
-    z-index: 1;
 }
 
 .uk-position-top { top: 0; }
@@ -463,7 +464,6 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 1;
 }
 
 .uk-position-relative { position: relative !important; }
